# network-hardware-video-decoder

./: .gitmodules  Android.mk  Application.mk  CMakeLists.txt  Doxyfile  README.md  envset  nhvd.c  nhvd.cpp  nhvd.h  nhvd_android.sh
examples/: README.md  nhvd_cloud_example.cpp  nhvd_frame_aux_example.c  nhvd_frame_example.c  nhvd_frame_example.cpp  nhvd_frame_multi_example.c  nhvd_frame_multi_example.cpp  nhvd_frame_raw_example.c  nhvd_receive_example.cpp
